Fixed background not covering larger resolutions

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,12 @@ form {
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   opacity: 0.1;
   z-index: -1;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center;
   background-image: none;
   background-image: var(--game-background);
 }
